# weather-task-v2

./: .dockerignore  .gitignore  CODE_REVIEW.md  Dockerfile  FIXES_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
app/: aggregator.py  config.py  geocoding.py  insight.py  main.py  models.py
app/providers/: __init__.py  base.py  oceandrivers.py  open_meteo.py  opensensemap.py  seven_timer.py  wttr.py
app/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_geocoding.py  test_insight.py  test_providers.py
